--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-a11y-dialog",
+  "name": "srf-react-a11y-dialog",
   "type": "module",
-  "version": "6.2.0",
+  "version": "1.0.0",
   "description": "A React component wrapper and React hook around a11y-dialog.",
   "homepage": "https://github.com/KittyGiraudel/react-a11y-dialog",
   "license": "MIT",
